# dynpy

./: .2022-11-05-143033.ipynb.sage-jupyter2  .Cone_side.ipynb.sage-chat  .Cone_side.ipynb.sage-jupyter2  .Raport - wal.tex.syncdb  .gitignore  .pre-commit-config.yaml  .rolleywithtmd.ipynb.sage-jupyter2  .test.ipynb.sage-jupyter2  2022-11-05-143033.ipynb  Auto.tif  DEADJOE  Exercies_x.tif  FEM_3exercise.ipynb  Fale_diagnostyka.ipynb  Gray21.tif  IPa_first.ipynb  LICENSE  Lena.tif  Lena_mono.tif  README.md  Raport - wal.tex  SLAM_FINAL.ipynb  __init__.py  basic_models.py  chair.py  chair_test.ipynb  chairmodels.py  continuous.py  dgeometry  dynamics.py  dynpy  dynpy.py  laby.py  mine.ipynb  moodle  moodle.py  pierdoła_fale.ipynb  plotTikZPlot0.tex  preamble.sty  pyproject.toml  (+10 more)
._dynpy_env/: dynpy
CoCalc/: ElementaryModels.py  Workbench.ipynb  dynpy.py
Julka/: First_Julka.ipynb
KNF/: stopy_zwrotu.ipynb
Latex/: Preambly.sty
Peter/: Balance.ipynb  Bank_Balance.ipynb  Bank_ZiS.ipynb  ZiS.ipynb
Python Scripts/: DoubleP_2.ipynb  Double_pedulum.ipynb  Untitled.ipynb  animate.ipynb
SLAM/: Landmark.ipynb  Omega, Xi.ipynb  Robot Moving.ipynb  SLAM.ipynb  helpers.py  robot_class.py
Stoki/: App_test.ipynb  Appka.ipynb  Balance_FA.ipynb  Balance_URL.ipynb  Jango_testy.ipynb  Testy_ogólne.ipynb  URL_ZiS.ipynb  flask.ipynb
Szkoła/: Car_2_EV.ipynb  Control_system.ipynb  Diagnostics_4.ipynb  EV_FINAL.ipynb  Electric_Vehicles.ipynb  Ploty.py  automatyka_2.ipynb  automatyka_3.ipynb  automatyka_lib.ipynb  diagno_4.xlsx  driving_conditions.ipynb  driving_cycle.ipynb
dynpy/: .dynamics.py.sage-chat  .test.ipynb.sage-jupyter2  core.py  dynamic.py  preamble.sty  solvers.py  trainmodels.py
management/: __init__.py  projects.py
models/: __init__.py  continuous.py  ddof.py  elements.py  mdof.py  offshore.py  pendulum_mdof.py  pendulum_sdof.py  sdof.py  systems.py  systems.py.orig  troley_sdof.py
questions/: __init__.py  en.py  pl.py
solvers/: .numerical.py-0-python3.term  __init__.py  linear.py  nonlinear.py  numerical.py  perturbational.py  reliability.py  tools.py
stock_app/: manage.py
utilities/: .report.py-0-python3.term  __init__.py  adaptable.py  ai_summarizer.py  cloning.py  creators.py  report.py  timeseries.py  tools.py
(+460 files in other folders)
